--- a/package.json
+++ b/package.json
@@ -19,14 +19,13 @@
   "homepage": "https://github.com/gyuree-kim/Git-it-server#readme",
   "dependencies": {
     "axios": "0.21.1",
-    "body-parser": "^1.19.0",
+    "body-parser": "1.19.0",
     "cheerio": "1.0.0-rc.6",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "mongodb": "^3.7.0",
-    "mongoose": "^5.13.9",
+    "cors": "2.8.5",
+    "express": "4.17.1",
+    "mongodb": "3.6.6",
+    "mongoose": "^5.12.7",
     "morgan": "1.10.0",
     "request": "2.88.2"
-  },
-  "devDependencies": {}
+  }
 }
